[package]
name = "breakout-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async Runtime
tokio = { version = "1.38", features = ["full"] }

# Database connectivity for TimescaleDB
sqlx = { version = "0.8", features = [
    "runtime-tokio", 
    "postgres", 
    "macros", 
    "chrono", 
    "bigdecimal"
] }

# Time, Date, and Timezone handling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"

# Logging and Observability
tracing = "0.1"
tracing-subscriber = "0.3"
