[package]
name = "breakout-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async Runtime
tokio = { version = "1.38", features = ["full"] }
# Time, Date, and Timezone handling
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
# Logging and Observability
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = { version = "1.3.0", features = ["tokio-comp"] }
reqwest = "0.13"
rust-candle-fetcher = { path = "../rust-candle-fetcher" }
toml = "1.1.2"
